--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@material-tailwind/react": "^2.1.5"
+		"@material-tailwind/react": "^2.1.5",
+		"heroicons": "^2.0.18"
 	}
 }
