ajout post sur la home

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"type": "module",
 	"dependencies": {
 		"@material-tailwind/react": "^2.1.5",
-		"heroicons": "^2.0.18"
+		"heroicons": "^2.0.18",
+		"query-string": "^8.1.0"
 	}
 }
